# pygame-snake

./: README.md  main.py  pyproject.toml  setup.sh  start.sh
src/: apple.py  snake.py  utils.py
