[tool.poetry]
name = "pygame-snake"
version = "0.1.0"
description = ""
authors = ["lgigek <lucasgigek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start-game = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
